--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
-
+  sqflite:
+  path:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flutter_slidable: ^0.5.4
+  intl: ^0.16.0
+  path_provider: ^1.6.7
 
 
 dev_dependencies:
