--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   flutter_localizations:
     sdk: flutter
 
@@ -34,7 +35,7 @@ dependencies:
   flutter_slidable: ^0.5.4
   intl: ^0.16.0
   path_provider: ^1.6.7
-
+  audioplayers: ^0.13.7
 
 dev_dependencies:
   flutter_test:
@@ -52,8 +53,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/sounds/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
