--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+4
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  firebase_admob: 0.9.0
   flutter_localizations:
     sdk: flutter
 
@@ -38,6 +38,8 @@ dependencies:
   audioplayers: ^0.13.7
   shared_preferences: ^0.4.1
   trotter: ^1.2.0
+  flutter_google_ad_manager: 0.10.1
+  flutter_store_listing: ^0.1.1+2
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +65,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/sounds/
-  #   - images/a_dot_ham.jpeg
+    - assets/images/wood.png
+    - assets/images/btn03_04_light.png
+    - assets/images/btn03_01_light.png
+    - assets/images/right_btn.png
+    - assets/images/tree_dark.png
+    - assets/images/tree_light_dark.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
