--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+1
+version: 1.0.2+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -23,7 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_admob: 0.9.0
   flutter_localizations:
     sdk: flutter
 
@@ -31,11 +30,13 @@ dependencies:
   path:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+#  firebase_core: ^0.4.5
+#  firebase_analytics: ^5.0.16
   cupertino_icons: ^0.1.3
-  flutter_slidable: ^0.5.4
+  flutter_slidable: ^0.5.7
   intl: ^0.16.0
   path_provider: ^1.6.7
-  audioplayers: ^0.13.7
+#  audioplayers: ^0.17.0
   shared_preferences: ^0.4.1
   trotter: ^1.2.0
   flutter_google_ad_manager: 0.10.1
