--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   flutter_slidable: ^0.5.7
   intl: ^0.16.0
   path_provider: ^1.6.7
-#  audioplayers: ^0.17.0
+  audioplayers: ^0.17.0
   shared_preferences: ^0.4.1
   trotter: ^1.2.0
   flutter_google_ad_manager: 0.10.1
