--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,16 @@ dependencies:
 #  firebase_analytics: ^5.0.16
   cupertino_icons: ^0.1.3
   flutter_slidable: ^0.5.7
-  intl: ^0.16.0
+#  intl: ^0.16.0
   path_provider: ^1.6.7
   audioplayers: ^0.13.7
-  shared_preferences: ^0.4.1
+  shared_preferences: ^0.5.12+4
   trotter: ^1.2.0
   flutter_google_ad_manager: 0.10.1
   flutter_store_listing: ^0.1.1+2
+
+dependency_overrides:
+  intl: ^0.17.0-nullsafety.2
 
 dev_dependencies:
   flutter_test:
