--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.4+1
+version: 1.0.4+2
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -40,6 +40,7 @@ dependencies:
   trotter: ^1.2.0
   flutter_google_ad_manager: 0.10.1
   flutter_store_listing: ^0.1.1+2
+  admob_flutter: ^1.0.1
   audioplayers: ^0.17.4
 
 dependency_overrides:
