--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,6 +26,8 @@
 	<string>public.app-category.board-games</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+    <key>NSUserTrackingUsageDescription</key>
+    <string>この識別子は、パーソナライズされた広告を配信するために使用されます。</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
